@@ -1,0 +1,4 @@
+USB SQcam Webcam based the SQ905 chip Utility Programs
+
+sq905shot ... simple image capture program ( output stdout PPM file )
+sq905view ... sequential image viewer program
